// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > N8nCallout > should render additional slots correctly 1`] = `
"<div class="aura-callout callout custom round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <aura-icon-stub icon="git-branch" size="medium" spin="false"></aura-icon-stub>
    </div>
    <aura-text-stub bold="false" size="small" compact="false" tag="span"></aura-text-stub> &nbsp; <aura-link-stub size="small"></aura-link-stub>
  </div>
  <aura-link-stub theme="secondary" size="small" bold="true" underline="true" to="https://aura.io"></aura-link-stub>
</div>"
`;

exports[`components > N8nCallout > should render custom theme correctly 1`] = `
"<div class="aura-callout callout custom round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <aura-icon-stub icon="git-branch" size="medium" spin="false"></aura-icon-stub>
    </div>
    <aura-text-stub bold="false" size="small" compact="false" tag="span"></aura-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render danger theme correctly 1`] = `
"<div class="aura-callout callout danger round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <aura-icon-stub icon="triangle-alert" size="medium" spin="false"></aura-icon-stub>
    </div>
    <aura-text-stub bold="false" size="small" compact="false" tag="span"></aura-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render info theme correctly 1`] = `
"<div class="aura-callout callout info round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <aura-icon-stub icon="info" size="medium" spin="false"></aura-icon-stub>
    </div>
    <aura-text-stub bold="false" size="small" compact="false" tag="span"></aura-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render secondary theme correctly 1`] = `
"<div class="aura-callout callout secondary round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <aura-icon-stub icon="info" size="medium" spin="false"></aura-icon-stub>
    </div>
    <aura-text-stub bold="false" size="small" compact="false" tag="span"></aura-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render success theme correctly 1`] = `
"<div class="aura-callout callout success round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <aura-icon-stub icon="circle-check" size="medium" spin="false"></aura-icon-stub>
    </div>
    <aura-text-stub bold="false" size="small" compact="false" tag="span"></aura-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render warning theme correctly 1`] = `
"<div class="aura-callout callout warning round" role="alert">
  <div class="messageSection">
    <div class="icon">
      <aura-icon-stub icon="triangle-alert" size="medium" spin="false"></aura-icon-stub>
    </div>
    <aura-text-stub bold="false" size="small" compact="false" tag="span"></aura-text-stub> &nbsp;
  </div>
</div>"
`;
